--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,11 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;600&display=swap');
+@import 'global';
 
 * {
   margin: 0;
   padding: 0;
   border: 0;
   font-size: 100%;
-  font-family: inherit;
+  font-family: 'Roboto Mono', sans-serif;
   vertical-align: baseline;
   box-sizing: border-box;
   color: inherit;
