--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -1,3 +1,6 @@
 :root {
-  --background-color: #f1f1f1
+  --background-color: #f1f1f1;
+  --main-width: 1000px;
+  --font-size-m: 21px;
+  --font-size-l: 28px;
 }
