--- a/src/widgets/Contact/ui/Contact.module.scss
+++ b/src/widgets/Contact/ui/Contact.module.scss
@@ -1,5 +1,11 @@
+.contactSection {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .contactWrapper {
-  width: 1140px;
+  width: var(--main-width);
   height: 200px;
   display: flex;
   justify-content: center;
@@ -11,9 +17,9 @@
 }
 .titleWrapper h3 {
   color: #1271ea;
-  font-size: 23px;
+  font-size: var(--font-size-m);
 
 }
 .titleWrapper h2 {
-  font-size: 30px;
+  font-size: var(--font-size-l);
 }
