--- a/src/widgets/Footer/ui/Footer.module.scss
+++ b/src/widgets/Footer/ui/Footer.module.scss
@@ -8,7 +8,6 @@
 }
 
 .mainSection {
-  width: 1140px;
   color: white;
 }
 
@@ -24,6 +23,13 @@
   margin-right: 20px;
   transition: transform 0.2s ease;
 }
+
 .icon:hover {
   transform: scale(1.1);
+}
+
+.infoWrapper {
+  display: flex;
+  justify-content: space-between;
+  width: var(--main-width);
 }
