--- a/src/widgets/Main/ui/Main.module.scss
+++ b/src/widgets/Main/ui/Main.module.scss
@@ -1,5 +1,7 @@
 .mainWrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  //display: flex;
+  //justify-content: center;
+  //align-items: center;
+  flex-direction: column;
+
 }
