feat: add adaptive 360 px

--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -3,4 +3,7 @@
   --main-width: 1000px;
   --font-size-m: 21px;
   --font-size-l: 28px;
+  --font-size-ss: 16px;
+  --font-size-s: 20px;
+  --font-size-p: 18px;
 }
