--- a/src/widgets/Contact/ui/Contact.module.scss
+++ b/src/widgets/Contact/ui/Contact.module.scss
@@ -1,11 +1,9 @@
 .contactSection {
   display: flex;
-  justify-content: center;
   align-items: center;
 }
 
 .contactWrapper {
-  width: var(--main-width);
   height: 200px;
   display: flex;
   justify-content: center;
@@ -15,11 +13,36 @@
 .titleWrapper {
   margin-bottom: 30px;
 }
+
 .titleWrapper h3 {
   color: #1271ea;
   font-size: var(--font-size-m);
 
 }
+
 .titleWrapper h2 {
   font-size: var(--font-size-l);
+}
+
+@media (max-width: 360px) {
+  .contactWrapper {
+    width: 320px;
+    padding: 5px;
+  }
+
+  .titleWrapper {
+    margin-bottom: 5px;
+  }
+
+  .titleWrapper h2 {
+    font-size: var(--font-size-s);
+    margin-bottom: 10px;
+  }
+
+  .titleWrapper h3 {
+    font-size: var(--font-size-ss);
+    margin-bottom: 5px;
+
+  }
+
 }
