--- a/src/widgets/ContactWidget/ui/ContactWidget.module.scss
+++ b/src/widgets/ContactWidget/ui/ContactWidget.module.scss
@@ -26,3 +26,18 @@
   display: flex;
   gap: 3px;
 }
+
+#mailIcon {
+  width: 50px;
+}
+
+@media (max-width: 340px) {
+
+  .imgWrapper {
+    width: 50px;
+    height: 50px;
+  }
+  #mailIcon {
+    width: 35px;
+  }
+}
