--- a/src/widgets/Main/ui/Main.module.scss
+++ b/src/widgets/Main/ui/Main.module.scss
@@ -1,7 +1,4 @@
 .mainWrapper {
-  //display: flex;
-  //justify-content: center;
-  //align-items: center;
-  flex-direction: column;
-
+  margin: 0 auto;
+  max-width: var(--main-width);
 }
