--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -8,6 +8,7 @@
   justify-content: space-between;
   padding: 0 40px;
   font-family: "Poppins", sans-serif;
+  margin-bottom: 20px;
 }
 
 .mainHeader h3 {
