feat: add redux, socials reducer, make black and white icons, finish content

--- a/src/app/styles/App.scss
+++ b/src/app/styles/App.scss
@@ -9,4 +9,16 @@
   flex: 1 1 auto;
 }
 
+.icon {
+  margin-right: 20px;
+  transition: transform 0.2s ease;
+  width: 40px;
+}
 
+.icon:hover {
+  transform: scale(1.1);
+}
+
+.black {
+  filter: hue-rotate(180deg);
+}
