--- a/src/widgets/Stack/ui/Stack.module.scss
+++ b/src/widgets/Stack/ui/Stack.module.scss
@@ -17,3 +17,13 @@
 .stackElWrapper img {
   width: 40px;
 }
+
+@media (max-width: 360px) {
+  .stackWrapper {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-column-gap: 20px;
+    grid-row-gap: 10px;
+  }
+}
