--- a/src/widgets/Content/ui/Content.module.scss
+++ b/src/widgets/Content/ui/Content.module.scss
@@ -62,12 +62,13 @@
   margin-bottom: 60px;
 }
 
-@media (max-width: 360px) {
+@media screen and (min-width: 360px) and (max-width: 400px) {
   .upperWrapper {
     display: flex;
     flex-direction: column-reverse;
     justify-content: center;
     align-items: center;
+    padding: 0 20px;
   }
 
   .infoWrapper {
