--- a/src/widgets/Stack/ui/Stack.module.scss
+++ b/src/widgets/Stack/ui/Stack.module.scss
@@ -18,7 +18,7 @@
   width: 40px;
 }
 
-@media (max-width: 360px) {
+@media screen and (min-width: 360px) and (max-width: 400px) {
   .stackWrapper {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
