--- a/src/widgets/Contact/ui/Contact.module.scss
+++ b/src/widgets/Contact/ui/Contact.module.scss
@@ -1,7 +1,7 @@
 .contactSection {
   display: flex;
   align-items: center;
-  margin-bottom: 50px;
+  padding: 0 0 160px 0;
 }
 
 .contactWrapper {
