--- a/src/widgets/Content/ui/Content.module.scss
+++ b/src/widgets/Content/ui/Content.module.scss
@@ -1,11 +1,11 @@
 .contentSection {
-  padding: 30px 0;
-  margin-bottom: 50px;
+  padding: 160px 0 0 0;
 }
 
 .upperWrapper {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   flex-wrap: wrap;
   gap: 30px;
   margin-bottom: 50px;
@@ -107,7 +107,7 @@
   }
 
   .contentSection {
-    padding: 20px 0 0 0;
     margin-bottom: 0;
+    padding: 90px 0 0 0;
   }
 }
